kubernetes/echoserver/http-svc.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
 # - host: k8s.wpcenter.cn
   - http:
      paths:
      - path: /http-svc
        backend:
          serviceName: http-svc
          servicePort: 80
